webui/k8s/01-kline-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kline-webui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kline-webui
  template:
    metadata:
      labels:
        app: kline-webui
    spec:
      containers:
        - name: kline-webui
          image: uhub.service.ucloud.cn/entropypool/kline-webui:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kline-webui
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: kline-webui
