webui/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kline-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: kline-webui
    k8s.kuboard.cn/workload: kline-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.linerameme.fun'
      secretName: linerameme-fun-tls
  rules:
    - host: testnet.linerameme.fun
      http:
        paths:
          - path: /
            backend:
              serviceName: kline-webui
              servicePort: 80
